[project]
name = "restaurant-booking-ddd"
version = "0.1.0"
description = "DDD + Clean Architecture example: restaurant table booking (Booking bounded context)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio",
  "fastapi",
  "uvicorn",
  "httpx",
  "pytest",
  "pytest-asyncio",
  "sqlalchemy",
  "ruff>=0.5",
  "asgiref"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

